--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TEMPLATESERVERPORT=8080
 TEMPLATESERVERHOST="http://localhost"
-TEMPLATESERVERSERVERS="http://192.168.1.1;http://192.168.1.2" # semi-colon delimited list of additional hosts
+TEMPLATESERVERALTERNATIVES="http://192.168.1.1;http://192.168.1.2" # semi-colon delimited list of additional hosts
